# echo-rs

./: .envexample  Cargo.toml  README.md  test.rs
src/: main.rs
src/commands/: choice.rs  help.rs  mod.rs  multiply.rs  music.rs  ping.rs  utils.rs  virustotal.rs
src/commands/music/: join.rs  leave.rs  mod.rs  nowplaying.rs  pause.rs  play.rs  queue.rs  resume.rs  shuffle.rs  skip.rs  stop.rs
