[package]
name = "echo-rs"
version = "0.0.1"
edition = "2021"


[dependencies]
dotenv = "0.15.0"
serenity = { version = "0.11", features = ["client", "standard_framework", "voice", "cache"]}
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
songbird = { version = "0.3.2", features = ["yt-dlp", "builtin-queue"] }
reqwest = "0.11.18"
serde = "1.0.163"
lazy_static = "1.4.0"
